--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+body{
+  min-width: 1200px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 26px;
+  font-family: 'PT Sans', "Arial", sans-serif;
+  color: #000000;
+  text-transform: uppercase;
+}
+
 .container{
   width: 1200px;
   margin: 0 auto;
@@ -11,33 +21,61 @@
 }
 
 header{
+  position: relative;
+  color: #000000;
+  background-color: white;
   outline: 1px solid black;
 }
 
 nav{
   width: 1160px;
-  margin: 0 auto;
+  outline: 1px solid black;
+}
+
+nav ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 0;
+}
+
+nav li{
+  display: inline-block;
+  font-size: 14px;
+  line-height: 26px;
+  vertical-align: top;
+}
+
+nav a{
+  display: block;
+  padding: 14px 70px;
+  margin-right: 8px;
+  color: #000;
+  font-weight: bold;
+  text-decoration: none;
   outline: 1px solid black;
 }
 
 .logo{
-  display: none;
+  position: absolute;
+  top: 0;
+  left: 530px;
+  display: block;
   width: 150px;
   outline: 1px solid black;
 }
 
 .greeting{
+  padding-top: 77px;
+  background: #e4f1fa url("../img/background.jpg") no-repeat center top;
   outline: 1px solid black;
 }
 
 .greeting-img{
   width: 460px;
-  margin-top: 75px;
-  margin-bottom: 140px;
+  margin-bottom: 240px;
   margin-left: auto;
   margin-right: auto;
-  /* временно */
-  background: lightgrey;
   outline: 1px solid black;
 }
 
@@ -122,6 +160,12 @@ footer{
   outline: 1px solid black;
 }
 
+footer::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .visit-sedona{
   float: left;
   margin-left: 70px;
@@ -146,14 +190,15 @@ footer{
   outline: 1px solid black;
 }
 
-/*Временно*/
-ul{
-  margin: 0;
-}
-
 .hotels-features{
   min-height: 220px;
   outline: 1px solid black;
+}
+
+.clearfix{
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .infrastructure{
@@ -182,6 +227,12 @@ ul{
   outline: 1px solid black;
 }
 
+.found::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .found-b{
   float: left;
   width: 150px;
@@ -191,7 +242,6 @@ ul{
 
 .found-items{
   float: left;
-  width: 380px;
   outline: 1px solid black;
 }
 
@@ -212,6 +262,12 @@ ul{
   outline: 1px solid black;
 }
 
+.found-hotels-item::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .hotel-img{
   float: left;
   margin-left: 75px;
@@ -221,7 +277,6 @@ ul{
 
 .about-hotel{
   float: left;
-  width: 280px;
   outline: 1px solid black;
 }
 
