--- a/css/style.css
+++ b/css/style.css
@@ -36,29 +36,49 @@ nav ul{
   margin: 0;
   padding: 0;
   list-style: none;
-  font-size: 0;
+}
+
+nav ul::after{
+  content: "";
+  display: table;
+  clear: both;
 }
 
 nav li{
-  display: inline-block;
-  font-size: 14px;
-  line-height: 26px;
-  vertical-align: top;
+  margin-top: 13px;
+  margin-bottom: 15px;
 }
 
 nav a{
-  display: block;
-  padding: 14px 70px;
-  margin-right: 8px;
   color: #000;
   font-weight: bold;
   text-decoration: none;
   outline: 1px solid black;
 }
 
+.nav-info{
+  float: left;
+  margin-left: 72px;
+}
+
+.nav-photo{
+  float: left;
+  margin-left: 147px;
+}
+
+.nav-map{
+  float: left;
+  margin-left: 388px;
+}
+
+.nav-hotels{
+  float: right;
+  margin-right: 31px;
+}
+
 .logo{
   position: absolute;
-  top: 0;
+  top: -1px;
   left: 530px;
   display: block;
   width: 150px;
@@ -67,23 +87,42 @@ nav a{
 
 .greeting{
   padding-top: 77px;
-  background: #e4f1fa url("../img/background.jpg") no-repeat center top;
+  background: #e4f1fa url("../img/background.jp") no-repeat center top;
   outline: 1px solid black;
 }
 
 .greeting-img{
   width: 460px;
-  margin-bottom: 240px;
+  margin-bottom: 132px;
   margin-left: auto;
   margin-right: auto;
   outline: 1px solid black;
 }
 
-.greetin-text{
+.greeting-text{
   width: 574px;
-  margin-bottom: 55px;
+  margin-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
+  outline: 1px solid black;
+}
+
+.greeting-text b{
+  display: block;
+  width: 445px;
+  margin: 0 auto;
+  margin-bottom: 28px;
+  font-size: 21px;
+  line-height: 26px;
+  text-align: center;
+  outline: 1px solid black;
+}
+
+.greeting-text p{
+  display: block;
+  width: 495px;
+  margin: 0 auto;
+  text-align: center;
   outline: 1px solid black;
 }
 
