--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body{
 }
 
 .container{
-  position: relative;
   width: 1200px;
   margin: 0 auto;
   outline: 1px solid black;
@@ -87,7 +86,12 @@ nav li:nth-child(3), nav li:nth-child(4){
   top: -1px;
   left: 530px;
   display: block;
+  z-index: 1;
   outline: 1px solid black;
+}
+
+main{
+  position: relative;
 }
 
 .greeting{
@@ -98,20 +102,20 @@ nav li:nth-child(3), nav li:nth-child(4){
   outline: 1px solid black;
 }
 
-.greetin::after{
+.greeting::after{
   content: "";
   display: block;
   position: absolute;
   width: 1200px;
   height: 57px;
   background: url("../img/shape.png") no-repeat;
-  top: 0;
+  top: 450px;
   left: 0;
 }
 
 .greeting-img{
   width: 460px;
-  margin-bottom: 135px;
+  margin-bottom: 60px;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 76px;
